Modify CI_release.yml to include packaging command
Updated the custom command in the CI release workflow to package the extension using 'npx @vscode/vsce@latest'.

--- a/.github/workflows/CI_release.yml
+++ b/.github/workflows/CI_release.yml
@@ -16,4 +16,5 @@ stages:
     - task: Npm@1
       inputs:
         command: 'custom'
-        customCommand: 'run package'
+
+        customCommand: 'npx @vscode/vsce@latest package -o $(Build.ArtifactStagingDirectory)/extension.vsix'
