Change packaging command in CI_release.yml
Updated the custom command for packaging the extension.

--- a/.github/workflows/CI_release.yml
+++ b/.github/workflows/CI_release.yml
@@ -17,4 +17,5 @@ stages:
       inputs:
         command: 'custom'
 
-        customCommand: 'npx @vscode/vsce@latest package -o $(Build.ArtifactStagingDirectory)/extension.vsix'
+        customCommand: 'vsce package --out $(Build.ArtifactStagingDirectory)/extension.vsix'
+
