Modify CI workflow to use npx for packaging
Updated packaging command for the extension.

--- a/.github/workflows/CI_release.yml
+++ b/.github/workflows/CI_release.yml
@@ -13,9 +13,9 @@ stages:
     - task: Npm@1
       inputs:
         command: 'install'
-    - task: Npm@1
-      inputs:
-        command: 'custom'
 
-        customCommand: 'vsce package --out $(Build.ArtifactStagingDirectory)/extension.vsix'
+      pwsh: npx @vscode/vsce@latest package -o $(Build.ArtifactStagingDirectory)/extension.vsix
+      displayName: 'Package extension'
+      workingDirectory: samples/extension-signing
+
 
