Fix npm command in CI_release.yml

--- a/.github/workflows/CI_release.yml
+++ b/.github/workflows/CI_release.yml
@@ -15,7 +15,8 @@ stages:
         command: 'install'
     - task: Npm@1
       inputs:
-        command: 'npm run package'
+        command: 'run package'
+
 
 
 
