Add step to publish VSIX artifact in CI workflow
Added a step to publish the VSIX artifact after copying it to the artifact staging directory.

--- a/.github/workflows/CI_release.yml
+++ b/.github/workflows/CI_release.yml
@@ -23,10 +23,20 @@ stages:
       inputs:
         command: 'custom'
         customCommand: 'run package'
+
     - script: |
         echo "Artifact dir is $ARTIFACT_DIR"
         cp vscode-edge-devtools.vsix $(ARTIFACT_DIR)
       displayName: 'Copy VSIX to Artifact Staging Directory'
       env:
         ARTIFACT_DIR: $(ARTIFACT_DIR)
+
+    - task: PublishBuildArtifacts@1
+      inputs:
+        pathToPublish: '$(ARTIFACT_DIR)'
+        artifactName: 'vsix-artifact'
+        publishLocation: 'Container'
+      displayName: 'Publish VSIX Artifact'
+
+
 
