Enable tasks in CI_release workflow

--- a/.github/workflows/CI_release.yml
+++ b/.github/workflows/CI_release.yml
@@ -13,18 +13,18 @@ stages:
     steps:
 
     - task: NodeTool@0
-      condition: false
+      condition: true
       inputs:
         versionSource: 'spec'
         versionSpec: '22.x'
 
     - task: Npm@1
-      condition: false
+      condition: true
       inputs:
         command: 'install'
 
     - task: Npm@1
-      condition: false
+      condition: true
       inputs:
         command: 'custom'
         customCommand: 'run package'
@@ -40,7 +40,7 @@ stages:
     - script: |
         echo "Artifact dir is $ARTIFACT_DIR"
         echo "esrpConnectionName dir is $ESRP_CONNECTION_NAME"
-        # cp vscode-edge-devtools.vsix $(ARTIFACT_DIR)
+        cp vscode-edge-devtools.vsix $(ARTIFACT_DIR)
       displayName: 'Copy VSIX to Artifact Staging Directory'
       env:
         ARTIFACT_DIR: $(ARTIFACT_DIR)
@@ -68,6 +68,7 @@ stages:
         artifactName: 'vsix-artifact'
         publishLocation: 'Container'
       displayName: 'Publish VSIX Artifact'
+
 
 
 
