Refactor CI_release.yml workflow structure

--- a/.github/workflows/CI_release.yml
+++ b/.github/workflows/CI_release.yml
@@ -53,7 +53,7 @@ stages:
       displayName: 'Prepare manifest for signing'
 
     - task: EsrpCodeSigning@6
-      conditional: false
+      condition: false
       inputs:
         ConnectedServiceName: $(ESRP_CONNECTION_NAME)
         AppRegistrationClientId: $(appRegistrationClientId)
@@ -86,6 +86,7 @@ stages:
         artifactName: 'vsix-artifact'
         publishLocation: 'Container'
       displayName: 'Publish VSIX Artifact'
+
 
 
 
